Swagger doc for user routes has been created
